--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- Background color -->
-    <solid android:color="#FFE6E6FA" />
+    <solid android:color="#00BCD4" />
 
     <!-- Corner radius -->
     <corners android:radius="10dp" />
