ui changes on gameover activity

--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -93,12 +93,13 @@
             android:gravity="center"
             android:orientation="vertical">
 
+
             <ImageView
                 android:id="@+id/retry"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="30dp"
-                android:src="@drawable/group_1" />
+                android:src="@drawable/group_1__1_" />
 
             <ImageView
                 android:id="@+id/menu"
@@ -112,7 +113,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_margin="20dp"
-                android:src="@drawable/group_3" />
+                android:src="@drawable/menu_icon" />
         </LinearLayout>
 
     </LinearLayout>
