--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_about_us"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -65,6 +66,6 @@
 
         <View
             android:layout_width="0dp"
-            android:layout_height="30dp" />
+            android:layout_height="10dp" />
     </LinearLayout>
 </ScrollView>
