gluing pieces toghether

--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -113,7 +113,7 @@
 
 
             <ImageView
-                android:id="@+id/next"
+                android:id="@+id/next_level"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="30dp"
